# rag

./: .env.example  .gitignore  CLAUDE.md  GITHUB_AUTH_SETUP.md  README.md  USER_API_KEY_GUIDE.md  chat_history.db  chat_history_db.py  custom_dashscope_llm.py  custom_qwen_embeddings.py  debug_dashscope.py  debug_native_dashscope.py  embedding.py  github_auth.py  gradio_app.py  gradio_oauth_app.py  pyproject.toml  qianwen_paper_qa.py  qianwen_paper_qa_api.py  requirements.txt  start_with_oauth.py  test.py  test_chroma_integration.py  test_gradio.py
test/: README.md  debug_dashscope2.py  test.py  test_custom_llm.py  test_retrieval_only.py
