[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.86.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.1.1",
    "python-dotenv>=1.1.0",
    "faiss-cpu>=1.11.0",
    "pypdf>=5.6.0",
    "gradio>=5.34.2",
    "chromadb>=1.0.13",
    "langchain-chroma>=0.2.4",
    "authlib>=1.6.0",
    "python-jose>=3.5.0",
    "langchain-dashscope==0.1.8",
]
